remove compile warning